# r-pipeline-development-workshop

./: .dockerignore  .env  .gitignore  .lintr  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _quarto.yml  docker-compose.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: documentation_improvement.yml  question.yml  refactor.yml
.github/workflows/: build-r.yaml  build.yaml  codeql.yaml
R/: probably_vetiver.R
app/: server.R  ui.R
app/R/: constants.R  globals.R
app/api/: plumber.R  vetiver_deploy.R
app/api/R/: vetiver_integration.R
dockerfiles/mlflow/: Dockerfile.0.1.0
dockerfiles/rstudio/: Dockerfile.0.1.0
dockerfiles/shiny/: Dockerfile.0.1.0
dockerfiles/superset/: Dockerfile
draft/CI_BAYES/Scripts/: 1_analysis.qmd  analysis_report.html  choice_model_1.stan
draft/book/: CODE_OF_CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  NEWS.html  NEWS.md  index.qmd
draft/book/h2o_deployment/: card.html  card.qmd  doc.qmd
draft/book/stan_deployment/: card.qmd  doc.qmd
draft/docs/: CODE_OF_CONDUCT.html  CONTRIBUTING.html  index.html  search.json
draft/docs/book/: CODE_OF_CONDUCT.html  (+2 more)
draft/pipelines/: _targets_h2o_deployment.R  _targets_tidymodels_deployment.R
draft/stan/: loss.stan
pages/: index.qmd
pages/announcements/: index.md
pages/stan_workshop/: doc.qmd
pages/tidymodels_workshop/: 1_intro.qmd  2_ml_workflow.qmd
scripts/dev/: build.sh  push.sh  up.sh
services/superset/: superset-init.sh  superset_config.py
stan/: cum_loss.stan
(+29 files in other folders)
