[tool.poetry]
name = "r-pipeline-development"
version = "0.1.0"
description = ""
authors = [
    "James Bristow <James.Bristow@plantandfood.co.nz>",
    "Hana Liang <Yongqi.Liang@plantandfood.co.n>",
    "Jingjing Zhang <Jingjing.Zhang@plantandfood.co.nz>",
    "Lindy Guo <Lindy.Guo@plantandfood.co.nz>",
    "Tom Moore <Tom.Moore@plantandfood.co.nz>"
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/PlantandFoodResearch/r-pipeline-development-workshop"

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
mlflow = "<=2.16.0"
numpy = "^2.2.6"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
pyyaml = "^6.0.2"
alembic = "^1.16.1"
flask = "^3.1.1"
scipy = "^1.15.3"
sqlalchemy = "^2.0.41"
boto3 = "^1.38.23"
botocore = "^1.38.23"
pip-system-certs = "^4.0"
psycopg2-binary = "^2.9.10"
prometheus-flask-exporter = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
